# tinyclaw

./: README.md
tinyClaw/: config.example.yaml  pyproject.toml
tinyClaw/agents/: s01_agent_loop.py  s02_tools.py  s03_skills.py  s04_subagents.py  s05_message_bus.py  s06_channel_telegram.py  s07_memory.py  s08_compaction.py  s09_cron.py  s10_sandbox.py  s11_mcp.py  s12_plugins.py
tinyClaw/examples/plugins/echo/: echo_plugin.py  plugin.json
tinyClaw/tinyclaw/: __init__.py  bus.py  config.py  gateway.py  main.py
tinyClaw/tinyclaw/agent/: __init__.py  compaction.py  context.py  heartbeat.py  hooks.py  loop.py  manager.py  memory.py  skills.py
tinyClaw/tinyclaw/channels/: __init__.py  base.py  cli.py  discord.py  feishu.py  telegram.py
tinyClaw/tinyclaw/cron/: __init__.py  scheduler.py
tinyClaw/tinyclaw/data/: tinyclaw.db
tinyClaw/tinyclaw/mcp/: __init__.py  client.py  manager.py
tinyClaw/tinyclaw/plugin/: __init__.py  manager.py  process.py  protocol.py
tinyClaw/tinyclaw/policy/: __init__.py  engine.py
tinyClaw/tinyclaw/provider/: __init__.py  openai_compat.py
tinyClaw/tinyclaw/sandbox/: __init__.py  docker.py
tinyClaw/tinyclaw/store/: __init__.py  sqlite.py
tinyClaw/tinyclaw/tools/: __init__.py  cron_tool.py  exec_tool.py  file_tool.py  memory_tool.py  message_tool.py  registry.py  subagent_tool.py  web_tool.py
tinyClaw/tutorial/: package-lock.json  package.json
tinyClaw/tutorial/src/app/: globals.css  layout.tsx  page.tsx
tinyClaw/tutorial/src/components/: ChangesTable.tsx  Header.tsx  (+4 more)
tinyClaw/workspace/: IDENTITY.md  MEMORY.md  SOUL.md
(+7 files in other folders)
