[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyclaw"
version = "0.12.0"
description = "TinyClaw — Python 学习版 OpenClaw，用于理解 AI Agent 架构"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
telegram = ["aiogram>=3.0"]
discord = ["discord.py>=2.0"]
all = [
    "aiogram>=3.0",
    "discord.py>=2.0",
]

[project.scripts]
tinyclaw = "tinyclaw.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["tinyclaw"]
